2000-01-20  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-edit.el (mime-edit-user-agent-value): Add apel-version.

2000-01-14  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* EMY 1.13.0 is released.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile, README.en: Update for the new CVS server.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Update for the recent ML address and ftp site.

1999-12-15  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-w3.el (mime-w3-message-structure): Removed.
	(mime-preview-text/html): Don't use mime-w3-message-structure.
	(mime-find-root-entity): New function. Should be in flim.
	(url-cid): Use it.

1999-12-14  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-inline): Avoid inheriting
	text property.
	(mime-preview-text): Ditto.
	(mime-preview-type): Ditto.

1999-12-07  Yoshiki Hayashi  <t90553@mai.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-scroll-full-screen): New variable.
	(mime-display-entiy): Fix attachment detection bug.

1999-12-06  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-buttonize): New function.
	(mime-preview-unbuttionize): New function.

1999-12-06  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* emy.texi: New file.

1999-12-06  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-view-entity-type/subtype): New function
	to workaround flim feature.

1999-12-06  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-view-insert-entity-button): New optional
	argument body-is-invisible.
	(mime-display-entity): Use it.
	(mime-view-button-place-alist): New variable.
	(mime-view-entity-button-visible-p): Use it.

1999-12-05  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-view-force-inline-types): New variable.
	(mime-display-entity): Respect Content-Disposition type.
	(mime-preview-condition): Treat unknown application subtype